Рефакторинг: - Создана новая модель данных Состояние статуса сопровождения автоинцидентов TrackingStates.java; - рефакторинг AccidentDataService.java, HibernateAccidentRepository.java, MemAccidentRepository.java.