@@ -4,7 +4,6 @@ import lombok.NoArgsConstructor;
 import net.jcip.annotations.ThreadSafe;
 import org.springframework.stereotype.Repository;
 import ru.job4j.accidents.model.*;
-import ru.job4j.accidents.repository.status.StatusRepository;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -23,6 +22,7 @@ public class MemAccidentRepository implements AccidentRepository {
      * Хранилище в виде СoncurrentHashMap
      */
     private final Map<String, List<Accident>> accidents = new ConcurrentHashMap<>();
+
     private final AtomicInteger atomicInteger = new AtomicInteger(1);
 
     @Override
@@ -89,7 +89,8 @@ public class MemAccidentRepository implements AccidentRepository {
     @Override
     public List<Accident> findAllByUserName(String userName) {
         List<Accident> accidentsInMem = accidents.get(userName);
-        return accidentsInMem == null ? List.of() : new ArrayList<>(accidentsInMem);
+        return accidentsInMem == null
+                ? Collections.emptyList() : new ArrayList<>(accidentsInMem);
     }
 
     @Override
@@ -97,7 +98,7 @@ public class MemAccidentRepository implements AccidentRepository {
         return accidents.values()
                 .stream()
                 .flatMap(Collection::stream)
-                .filter(a -> a.getStatus().getId() == StatusRepository.QUEUED_STATUS_ID)
+                .filter(a -> a.getStatus().getId() == TrackingStates.QUEUED_STATUS.getId())
                 .collect(Collectors.toList());
     }
 
@@ -106,7 +107,7 @@ public class MemAccidentRepository implements AccidentRepository {
         return accidents.values()
                 .stream()
                 .flatMap(Collection::stream)
-                .filter(a -> a.getStatus().getId() == StatusRepository.ARCHIVED_STATUS_ID)
+                .filter(a -> a.getStatus().getId() == TrackingStates.ARCHIVED_STATUS.getId())
                 .collect(Collectors.toList());
     }
 
